--- a/resume.css
+++ b/resume.css
@@ -1,30 +1,45 @@
 @media print {
   body {
-    font-size: 15px !important; }
+    font-size: 14px !important;
+  }
 
   .landing {
-    max-height: 600px !important; }
-
-  .resume {
-    width: 85% !important; }
+    display: none !important;
+  }
 
   .resume-box {
-    padding: 80px 0 40px !important; }
-
-  .profile {
-    padding: 2em 3em !important; }
+    padding: 40px 0 20px !important;
+  }
 
   .resume {
-    min-height: 0 !important; } }
+    width: 85% !important;
+    border: none !important;
+  }
+
+  .resume {
+    min-height: 0 !important;
+  }
+
+  .profile, .information, .experience {
+    color: black !important;
+    padding: 0.5em 0em !important;
+  }
+
+  .profile img {
+    display: none !important;
+  }
+}
 body {
   margin: 0;
   font-size: 18px;
-  font-family: 'Open Sans', 'Helvetica Neue', Arial, 'Hiragino Sans GB', 'Microsoft YaHei', 'WenQuanYi Micro Hei', sans-serif;
-  background-color: #fefefe; }
+  font-family: "Open Sans", "Helvetica Neue", Arial, "Hiragino Sans GB", "Microsoft YaHei", "WenQuanYi Micro Hei", sans-serif;
+  background-color: #fefefe;
+}
 
 .ai {
   font-weight: bold;
-  transform: scale(0.9); }
+  transform: scale(0.9);
+}
 
 .landing {
   display: flex;
@@ -35,34 +50,41 @@ body {
   width: 100%;
   font-size: 24px;
   color: white;
-  background-color: #428cdd; }
-  .landing h1 {
-    font-weight: 200; }
-  .landing i {
-    color: white;
-    font-size: 2em; }
+  background-color: #428cdd;
+}
+.landing h1 {
+  font-weight: 200;
+}
+.landing i {
+  color: white;
+  font-size: 2em;
+}
 
 .content {
   flex-grow: 1;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center; }
-  .content .link-icons i {
-    margin: 0 0.3em; }
+  align-items: center;
+}
+.content .link-icons i {
+  margin: 0 0.3em;
+}
 
 .down-arrow {
   height: 10vh;
   display: flex;
   justify-content: center;
-  align-items: center; }
+  align-items: center;
+}
 
 .resume-box {
   display: flex;
   width: 100%;
   justify-content: center;
   align-items: center;
-  padding: 10vh 0; }
+  padding: 10vh 0;
+}
 
 .resume {
   display: flex;
@@ -72,36 +94,55 @@ body {
   flex-direction: column;
   align-items: stretch;
   border: 5px solid #428cdd;
-  padding-bottom: 2em; }
+  padding-bottom: 2em;
+}
 
 .profile {
   padding: 5vh 3em 2em;
   color: white;
-  background-color: #428cdd; }
-  .profile img {
-    height: 6em;
-    float: left;
-    border-radius: 50%; }
-  .profile .text-block {
-    padding-left: 8em; }
-    .profile .text-block h1 {
-      margin: 0; }
-    .profile .text-block p {
-      margin: 0.3em 0;
-      font-weight: normal; }
+  background-color: #428cdd;
+  display: flex;
+}
+.profile img {
+  height: 6em;
+  border-radius: 50%;
+  margin-right: 3em;
+}
+.profile .text-block h1 {
+  font-size: 1.4em;
+  margin: 0;
+}
+.profile .text-block p {
+  margin: 0.3em 0;
+  font-weight: normal;
+}
 
-.experience {
-  padding: 1em 2em; }
-  .experience h2 {
-    margin: 0.4em 0; }
-  .experience h3, .experience p {
-    margin: 0.3em 0; }
-  .experience h3 {
-    font-size: 1.05em;
-    font-weight: normal; }
-  .experience p {
-    padding-left: 2em; }
-  .experience .text-hide {
-    color: rgba(0, 0, 0, 0); }
+.experience, .information {
+  padding: 1em 2em;
+}
+.experience .value-table .item, .information .value-table .item {
+  display: flex;
+  align-items: baseline;
+}
+.experience .value-table .key, .information .value-table .key {
+  min-width: 160px;
+}
+
+.experience h2 {
+  margin: 0.4em 0;
+}
+.experience h3, .experience p {
+  margin: 0.3em 0;
+}
+.experience h3 {
+  font-size: 1.05em;
+  font-weight: normal;
+}
+.experience p {
+  padding-left: 2em;
+}
+.experience .text-hide {
+  color: rgba(0, 0, 0, 0);
+}
 
 /*# sourceMappingURL=resume.css.map */
