--- a/resume.css
+++ b/resume.css
@@ -1,6 +1,6 @@
 @media print {
   body {
-    font-size: 14px !important;
+    font-size: 15px !important;
   }
 
   .landing {
@@ -22,11 +22,15 @@
 
   .profile, .information, .experience {
     color: black !important;
-    padding: 0.5em 0em !important;
+    padding: 0.5em 0 !important;
   }
 
   .profile img {
     display: none !important;
+  }
+
+  h1, h2, h3, p, a {
+    break-inside: avoid !important;
   }
 }
 body {
