--- a/2020_Google_STEP/resume.css
+++ b/2020_Google_STEP/resume.css
@@ -46,6 +46,10 @@ body {
   transform: scale(0.9);
 }
 
+a, a:visited {
+  color: #428cdd;
+}
+
 .landing {
   display: flex;
   flex-direction: column;
