--- a/2020_Google_STEP/resume.scss
+++ b/2020_Google_STEP/resume.scss
@@ -52,6 +52,10 @@ body {
   transform: scale(0.9);
 }
 
+a, a:visited {
+  color: #428cdd;
+}
+
 .landing {
   display: flex;
   flex-direction: column;
